--- a/jupyter/quantum.ipynb
+++ b/jupyter/quantum.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "f5ae0f2c-e306-48b0-9733-41c63ecc55e0",
    "metadata": {},
    "outputs": [
@@ -10,34 +10,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: matplotlib in c:\\python311\\lib\\site-packages (3.7.2)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in c:\\python311\\lib\\site-packages (from matplotlib) (1.1.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\python311\\lib\\site-packages (from matplotlib) (0.11.0)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in c:\\python311\\lib\\site-packages (from matplotlib) (4.42.1)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\python311\\lib\\site-packages (from matplotlib) (1.4.5)\n",
-      "Requirement already satisfied: numpy>=1.20 in c:\\python311\\lib\\site-packages (from matplotlib) (1.23.5)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\python311\\lib\\site-packages (from matplotlib) (23.0)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in c:\\python311\\lib\\site-packages (from matplotlib) (9.5.0)\n",
-      "Requirement already satisfied: pyparsing<3.1,>=2.3.1 in c:\\python311\\lib\\site-packages (from matplotlib) (2.4.7)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\python311\\lib\\site-packages (from matplotlib) (2.8.2)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\python311\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEPRECATION: Loading egg at c:\\python311\\lib\\site-packages\\vboxapi-1.0-py3.11.egg is deprecated. pip 23.3 will enforce this behaviour change. A possible replacement is to use pip for package installation..\n"
+      "\u001b[33mDEPRECATION: Loading egg at /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/memtorch_cpu-1.1.6-py3.11-macosx-10.9-universal2.egg is deprecated. pip 23.3 will enforce this behaviour change. A possible replacement is to use pip for package installation..\u001b[0m\u001b[33m\n",
+      "\u001b[0mRequirement already satisfied: matplotlib in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (3.7.2)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from matplotlib) (1.1.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from matplotlib) (0.11.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from matplotlib) (4.42.1)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from matplotlib) (1.4.5)\n",
+      "Requirement already satisfied: numpy>=1.20 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from matplotlib) (1.25.2)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from matplotlib) (23.1)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from matplotlib) (10.0.0)\n",
+      "Requirement already satisfied: pyparsing<3.1,>=2.3.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from matplotlib) (3.0.9)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: six>=1.5 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "!pip install matplotlib"
+    "%pip install matplotlib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "b0ecee83-d5ee-4cc6-831d-177a9de75572",
    "metadata": {},
    "outputs": [
@@ -45,37 +40,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: qiskit in c:\\python311\\lib\\site-packages (0.44.1)\n",
-      "Requirement already satisfied: qiskit-terra==0.25.1 in c:\\python311\\lib\\site-packages (from qiskit) (0.25.1)\n",
-      "Requirement already satisfied: rustworkx>=0.13.0 in c:\\python311\\lib\\site-packages (from qiskit-terra==0.25.1->qiskit) (0.13.1)\n",
-      "Requirement already satisfied: numpy>=1.17 in c:\\python311\\lib\\site-packages (from qiskit-terra==0.25.1->qiskit) (1.23.5)\n",
-      "Requirement already satisfied: ply>=3.10 in c:\\python311\\lib\\site-packages (from qiskit-terra==0.25.1->qiskit) (3.11)\n",
-      "Requirement already satisfied: psutil>=5 in c:\\python311\\lib\\site-packages (from qiskit-terra==0.25.1->qiskit) (5.9.5)\n",
-      "Requirement already satisfied: scipy>=1.5 in c:\\python311\\lib\\site-packages (from qiskit-terra==0.25.1->qiskit) (1.10.1)\n",
-      "Requirement already satisfied: sympy>=1.3 in c:\\python311\\lib\\site-packages (from qiskit-terra==0.25.1->qiskit) (1.12)\n",
-      "Requirement already satisfied: dill>=0.3 in c:\\python311\\lib\\site-packages (from qiskit-terra==0.25.1->qiskit) (0.3.7)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.0 in c:\\python311\\lib\\site-packages (from qiskit-terra==0.25.1->qiskit) (2.8.2)\n",
-      "Requirement already satisfied: stevedore>=3.0.0 in c:\\python311\\lib\\site-packages (from qiskit-terra==0.25.1->qiskit) (5.1.0)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\python311\\lib\\site-packages (from python-dateutil>=2.8.0->qiskit-terra==0.25.1->qiskit) (1.16.0)\n",
-      "Requirement already satisfied: pbr!=2.1.0,>=2.0.0 in c:\\python311\\lib\\site-packages (from stevedore>=3.0.0->qiskit-terra==0.25.1->qiskit) (5.11.1)\n",
-      "Requirement already satisfied: mpmath>=0.19 in c:\\python311\\lib\\site-packages (from sympy>=1.3->qiskit-terra==0.25.1->qiskit) (1.3.0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEPRECATION: Loading egg at c:\\python311\\lib\\site-packages\\vboxapi-1.0-py3.11.egg is deprecated. pip 23.3 will enforce this behaviour change. A possible replacement is to use pip for package installation..\n"
+      "\u001b[33mDEPRECATION: Loading egg at /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/memtorch_cpu-1.1.6-py3.11-macosx-10.9-universal2.egg is deprecated. pip 23.3 will enforce this behaviour change. A possible replacement is to use pip for package installation..\u001b[0m\u001b[33m\n",
+      "\u001b[0mCollecting qiskit\n",
+      "  Obtaining dependency information for qiskit from https://files.pythonhosted.org/packages/36/43/be9bc635ff62d27a18de52f87aaaf7eb7b0bc80f1241684c4673907d5757/qiskit-0.44.1-py3-none-any.whl.metadata\n",
+      "  Downloading qiskit-0.44.1-py3-none-any.whl.metadata (8.2 kB)\n",
+      "Collecting qiskit-terra==0.25.1 (from qiskit)\n",
+      "  Obtaining dependency information for qiskit-terra==0.25.1 from https://files.pythonhosted.org/packages/28/38/137a26c022fb24234aafe08ab764c0611c090ce1715bd66238b629461184/qiskit_terra-0.25.1-cp38-abi3-macosx_11_0_arm64.whl.metadata\n",
+      "  Downloading qiskit_terra-0.25.1-cp38-abi3-macosx_11_0_arm64.whl.metadata (9.0 kB)\n",
+      "Collecting rustworkx>=0.13.0 (from qiskit-terra==0.25.1->qiskit)\n",
+      "  Obtaining dependency information for rustworkx>=0.13.0 from https://files.pythonhosted.org/packages/38/db/1800dc4a408edaf5ae1479dd822a917f78cd8e39d09f014ab2b4fac612bf/rustworkx-0.13.1-cp311-cp311-macosx_11_0_arm64.whl.metadata\n",
+      "  Downloading rustworkx-0.13.1-cp311-cp311-macosx_11_0_arm64.whl.metadata (10 kB)\n",
+      "Requirement already satisfied: numpy>=1.17 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from qiskit-terra==0.25.1->qiskit) (1.25.2)\n",
+      "Collecting ply>=3.10 (from qiskit-terra==0.25.1->qiskit)\n",
+      "  Downloading ply-3.11-py2.py3-none-any.whl (49 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.6/49.6 kB\u001b[0m \u001b[31m1.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: psutil>=5 in /Users/ohik/Library/Python/3.11/lib/python/site-packages (from qiskit-terra==0.25.1->qiskit) (5.9.5)\n",
+      "Requirement already satisfied: scipy>=1.5 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from qiskit-terra==0.25.1->qiskit) (1.11.2)\n",
+      "Requirement already satisfied: sympy>=1.3 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from qiskit-terra==0.25.1->qiskit) (1.12)\n",
+      "Collecting dill>=0.3 (from qiskit-terra==0.25.1->qiskit)\n",
+      "  Obtaining dependency information for dill>=0.3 from https://files.pythonhosted.org/packages/f5/3a/74a29b11cf2cdfcd6ba89c0cecd70b37cd1ba7b77978ce611eb7a146a832/dill-0.3.7-py3-none-any.whl.metadata\n",
+      "  Downloading dill-0.3.7-py3-none-any.whl.metadata (9.9 kB)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from qiskit-terra==0.25.1->qiskit) (2.8.2)\n",
+      "Collecting stevedore>=3.0.0 (from qiskit-terra==0.25.1->qiskit)\n",
+      "  Obtaining dependency information for stevedore>=3.0.0 from https://files.pythonhosted.org/packages/4b/68/e739fd061b0aba464bef8e8be48428b2aabbfb3f2f8f2f8ca257363ee6b2/stevedore-5.1.0-py3-none-any.whl.metadata\n",
+      "  Downloading stevedore-5.1.0-py3-none-any.whl.metadata (2.2 kB)\n",
+      "Collecting symengine<0.10,>=0.9 (from qiskit-terra==0.25.1->qiskit)\n",
+      "  Downloading symengine-0.9.2-cp311-cp311-macosx_11_0_arm64.whl (16.0 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m16.0/16.0 MB\u001b[0m \u001b[31m28.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: six>=1.5 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from python-dateutil>=2.8.0->qiskit-terra==0.25.1->qiskit) (1.16.0)\n",
+      "Collecting pbr!=2.1.0,>=2.0.0 (from stevedore>=3.0.0->qiskit-terra==0.25.1->qiskit)\n",
+      "  Downloading pbr-5.11.1-py2.py3-none-any.whl (112 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m112.7/112.7 kB\u001b[0m \u001b[31m15.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: mpmath>=0.19 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from sympy>=1.3->qiskit-terra==0.25.1->qiskit) (1.3.0)\n",
+      "Downloading qiskit-0.44.1-py3-none-any.whl (8.2 kB)\n",
+      "Downloading qiskit_terra-0.25.1-cp38-abi3-macosx_11_0_arm64.whl (5.3 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.3/5.3 MB\u001b[0m \u001b[31m21.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading dill-0.3.7-py3-none-any.whl (115 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m115.3/115.3 kB\u001b[0m \u001b[31m24.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading rustworkx-0.13.1-cp311-cp311-macosx_11_0_arm64.whl (1.5 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.5/1.5 MB\u001b[0m \u001b[31m20.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading stevedore-5.1.0-py3-none-any.whl (49 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.6/49.6 kB\u001b[0m \u001b[31m7.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: ply, symengine, rustworkx, pbr, dill, stevedore, qiskit-terra, qiskit\n",
+      "\u001b[33m  WARNING: The script pbr is installed in '/Library/Frameworks/Python.framework/Versions/3.11/bin' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\u001b[33m\n",
+      "\u001b[0mSuccessfully installed dill-0.3.7 pbr-5.11.1 ply-3.11 qiskit-0.44.1 qiskit-terra-0.25.1 rustworkx-0.13.1 stevedore-5.1.0 symengine-0.9.2\n"
      ]
     }
    ],
    "source": [
-    "!pip install qiskit"
+    "%pip install qiskit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "11b4d551-099e-49f7-a8e6-8536be295c32",
    "metadata": {},
    "outputs": [],
@@ -85,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "ed5cfe5b-7f30-4491-9337-93997762b66b",
    "metadata": {},
    "outputs": [
@@ -96,7 +115,7 @@
        "<Figure size 480x480 with 1 Axes>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
