--- a/Ohik_paper_reading/When Entanglement Meets Classical Communications/When Entanglement Meets Classical Communications- Quantum Teleportation for the Quantum Internet.ipynb
+++ b/Ohik_paper_reading/When Entanglement Meets Classical Communications/When Entanglement Meets Classical Communications- Quantum Teleportation for the Quantum Internet.ipynb
@@ -72,8 +72,31 @@
     "\n",
     "### D. Composite Quantum System\n",
     "In classical physics, the legitimate states of a system of $n$ objects, whose individual states can be described by a vector in a two-dimensional vector space, can be described by vectors in a vector space of $2$ dimensions. In quantum mechanics, the state space of a composite quantum system made up of $n$ quantum systems, each having states modeled by two-dimensional vectors, is much larger. ($2^n$) spaces.\n",
-    "**Hence, if "
+    "\n",
+    "Hence, if the systems are numbered 0 through n-1, and the system having the index *i* is prepared in the state$ $|\\Psi_i>$, then the joint state $|\\Psi>$ of the resultant composite system is $|\\Psi> = |\\Psi_0> \\bigotimes |\\Psi_1> \\bigotimes ...|\\Psi_(n-1)>$ .... **where mixed states came from! check our understanding of basis and quantum states!**\n",
+    "\n",
+    "A more compack and readable notation uses $|\\Psi_0\\Psi_1\\Psi_2\\cdots\\Psi_(n-1)>$. \n",
+    "By exploiting this notation, if V and W are vector spaces corresponding to a qubit, each having the standard basis of ${|0>, |1>}$, then the composite two-qubit system $V\\bigotimes W$ has the basis :\n",
+    "${|00>, |01>, |10>, |11>}$\n",
+    "\n",
+    "Just like a single qubit system, a possiblestate of a two-qubit system can be in a superposition of the basis states:\n",
+    "\n",
+    "$|\\Psi> = \\alpha_0|00> + \\alpha_1|01> + \\alpha_2|10> + \\alpha_3|11> = \\begin{bmatrix} \\alpha_0 \\\\ \\alpha_1 \\\\ \\alpha_2 \\\\ \\alpha_3 \\end{bmatrix} $ *take care of normalization*\n",
+    "\n",
+    "Further generalizing this procedure, an *n*-qubit sytem can be in a superposition of all the $2^n$ basis states, which is formulated as :\n",
+    "\n",
+    "$ |\\Psi> = \\sum_{i=1}^{2^n - 1} \\alpha_n|i> $ *take care of normalization.*\n",
+    "\n",
+    "Hence, while *n* classical bits are only ever in one of the $2^n$ possible states at any given moment, an n-qubit register can be in a superposition of all of the possible states.\n",
+    "\n",
+    "\n",
+    "### E. entanglement."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
