teleportation case updated

--- a/Ohik_paper_reading/When Entanglement Meets Classical Communications/When Entanglement Meets Classical Communications- Quantum Teleportation for the Quantum Internet.ipynb
+++ b/Ohik_paper_reading/When Entanglement Meets Classical Communications/When Entanglement Meets Classical Communications- Quantum Teleportation for the Quantum Internet.ipynb
@@ -60,10 +60,10 @@
     "After its measurement/observation, the orginial quantum state collapses to the measured state. Hence, the measurement irrevesibly alters theoriginal qbit state.\n",
     "\n",
     "### C. Phase\n",
-    "The angle $\\theta$ mentioned is referred to as the *phase* of the quantum state. \n",
+    "The angle $\\phi$ mentioned is referred to as the *phase* of the quantum state. \n",
     "Specifically, we say that the state $ e^(i\\gamma)*|\\Psi>$ is equal to $|\\Psi>$ up to the global phase factor, $e^(i\\gamma)$, with $\\gamma$ being the global phase.\n",
     "The stattistics of measurement predicted for these two states are the same. \n",
-    "The *relative phase $\\theta$* annot be neglected, and indeed it is critical to quantum computation.\n",
+    "The *relative phase $\\phi$* cannot be neglected, and indeed it is critical to quantum computation.\n",
     "The realtive phase of a superposition is a measure - in the complex plane - of the angle between $\\alpha$ and$\\beta$. \n",
     "Two quantum states having same amplitude for each same basis, but having different phase represent different states.\n",
     "\n",
@@ -90,13 +90,123 @@
     "Hence, while *n* classical bits are only ever in one of the $2^n$ possible states at any given moment, an n-qubit register can be in a superposition of all of the possible states.\n",
     "\n",
     "\n",
-    "### E. entanglement."
+    "### E. entanglement.\n",
+    "The vast majority of *n* qubit states cannot be written as the tensor product of *n* single qubit states, even though they are all linear combinations of the basis states of the composite *n* qubit system. Such states are termed **entangled** states.\n",
+    "\n",
+    "More formally, given a state $|\\Psi>$ of a composite quantum system associated with the vector space V and a tensor decomposition of V, namely $ V = V_0 \\bigotimes V_1 \\cdots V_(n-1)$, the state $|\\Psi>$ is separable, or unentangled - w.r.t. that decomposition - if it can be written as $ |\\Psi> = |v_0> \\bigotimes |v_1> \\bigotimes \\cdots |v_(n-1)> $, where $|v_i>$ belongs to $V_i$. Otherwise, $|\\Psi>$ is entangled with respect to this particular decomposition, but may be unentangled with other decompositions into subsystems.\n",
+    "\n",
+    "#### Bell states, EPR pair.\n",
+    "\n",
+    "$|\\Phi^+>$ = $1 \\over\\sqrt{2}$ $*(|00> + |11>)$, \n",
+    "$|\\Phi^->$ = $1 \\over\\sqrt{2}$ $*(|00> - |11>)$, \n",
+    "$|\\Psi^+>$ = $1 \\over\\sqrt{2}$ $*(|01> + |10>)$, \n",
+    "$|\\Psi^->$ = $1 \\over\\sqrt{2}$ $*(|01> - |10>)$.\n",
+    "\n",
+    "which represents four maximally entangled 2-qubit states. The Bell states cannot be decomposed, since it is impossible to find a_0, a_1, b_0, and b_1 for assuring that\n",
+    "(a_0 |0> + b_0 |1>) $\\bigotimes$ (a_1 |0> + b_1 |1>) = $|\\Phi^\\pm>$\n",
+    "or equivalently, that : \n",
+    "(a_0 |0> + b_0 |1>) $\\bigotimes$ (a_1 |0> + b_1 |1>) = $|\\Psi^\\pm$\n",
+    "\n",
+    "At the time of wrting the most cmmon from of this test is constituted by the *CHSH* inequality. This phenomenon seems to suggest that information is being transmitted faster than light, violating the theory of relativity. But the paradox is illusory, since entanglement does not allow the transmission of information faster than light, as it will be clarified in Sec III.\n",
+    "\n",
+    "### F. Quantum State Trnasformations\n",
+    "![image](Fig1.png)\n",
+    "\n",
+    "\n",
+    "Closed quantum systems evolve in time according to deterministic, reversible unitary operations. Hence Nature does not allow arbitrary transformations of a closed quantum system.\n",
+    "That is, the state $|\\Psi(t)>$ of the system at time *t* is related to the state $|\\Psi(0)>$ of the system at an initail time instant 0 through a unitary operator $U(.)$, whichdepends only on the time instatns *t and 0:\n",
+    "$|\\Psi(t)>$ = $U|\\Psi(0)>$\n",
+    "\n",
+    "*Remark1* : Any linear operator A : V -> W between vector space V and W admits a matrix representation that is completely equivalent to the operator A(). Hence, the matrix representation andthe operator are interchangeable. Consequently, in the following, we will use the same symbol to denote both of them without any loss of generality.\n",
+    "\n",
+    "*Remark2* : Unitary operators are special linear operators having uniary matrix representations, i.e. we have $U^\\dagger$$U$ = *I*. A unitaryoperator is aninvertible operator satisfying $U^(-1)$ = $U^\\dagger$.\n",
+    "\n",
+    "The unitary operators can be regarded as gates in the circuit model usually adopted both in quantum computation and in quantum information processing. \n",
+    "\n",
+    "Hence, although experiemtalists usually describe the behavior of a quantum sytem by emphasizing the temporal nature of the evolution, in the circuit model perspective the temporal dependence is hidden within input-output relationships. *As a consequence, unless explicitly stated, in the following we wil not emphasize the temporal dependence of a quantum gate.*\n",
+    "\n",
+    "Please note that the expressions \"Quantum transformation\" or \"quantum operator\" refer to unitary operators applied to the state space, not to measurement operators. Geometrically speaking, all quatum state transformations may also be interpreted as rotations of the complex vector space associated with the quantum state space.\n",
+    "**An important consequence of the unitary nature of the quantum transformations is the no-cloning therem: unknown quantum states cannot be copied or cloned.**\n",
+    "*Indded, the no-cloning theorem has a deep and complex impact on the design of quantum communications, as it wil be discussed in deail in the following sections. The corruption of te transmitted classcial information by the noise does not imply the total loss of the information, since a copy of the original information can be sotred at the source. By contrast, the corruption of the transmitted quantum infroamtion by decoherence implies theirreversible loss of information.*\n",
+    "\n",
+    "### G. Pure and Mixed States: *The Density Matrix and Quantum Fidelity* ###\n",
+    "\n",
+    "Quantum states can be either pure or mixed. So far, we have discussed only pure states. Briefly, a pure state is a quantum state that can be described by a ket vector. (it can be written in the state-vector form.) This does not mean that the state-vector form has only one term : *both |0> and $\\Alpha$|0> + $\\Beta$|1> are pure states.\n",
+    "\n",
+    "In contrast, mixed states are not viewed as true quantum states, but rather as a way of describing a system whose state is not fully defined. Insted, a mixed state is a probabilistic mixture of well-defined pure states, known as a *statistical ensemble*. In particular, pure staets ive deterministic results when measrued in appropriatebases, whereas mixed states give probailistic results in all bases.\n",
+    "\n",
+    "*The individual qubits of an EPR pair constitute examples of mixed states, since they cannot be described individually by a well-defined ket vector.* However, not all the mixed states are entangled. \n",
+    "\n",
+    "Although three exist different interpretations of the mixed states, they are modeled in mathematical terms by density operators (or density matrices), regardless of the underlying physical interpretation. Their mean can be used for the redimentary characterization of the statistical properties of an ensemble of quantum states. More precisely, let us assume that a quantum system is in one of a number of legitimate states $|\\Psi_i>$, where $i$ is the state index, and the legitimate states have the respective probabilities $\\{\\rho_i\\}$. In this context, $\\{\\rho_i,|\\Psi_i>\\}$ is an ensemble of pure states The density operator $\\rho$ of the system is defined as \n",
+    "$ \\rho = \\sum_{i}^{} p_i |\\Psi_i><\\Psi_i|.$\n",
+    "The density operator $\\rho$ is a positive operator with trace one, $Tr(\\rho) = 1$. For a pure state $|\\Psi>$, the density matrix is equal to $\\rho = |\\Psi><\\Psi|$ with $Tr(\\rho^2) = 1,$ wehreas for a mixed state $Tr(\\rho^2)<1$.\n",
+    "\n",
+    "\n",
+    "The imperfection of mixed states can be quantifid by a fundamental figure of merit known as *quantum fidelity.* The fidelity $F$ of a mixed state associated with the density matrix $\\rho$, with respect to acertain desired pure state $|\\Psi>$, is a metric - taking values between 0 and 1 - of the distinguishability of the two quantum sates, defined as \n",
+    "$F = <\\Psi|\\rho|\\Psi>$. \n",
+    "Based on this definition, the fidelity can be conceptually described as the \"**overlap**\" of the mixed state with the desired state $|\\psi>$. The fidelity is 1 for a pure state and it decreases as the decoherence degrades the \"quality\" of the state.\n",
+    "\n",
+    "### H. The Block Vector ###\n",
+    "![image](Fig2.png)\n",
+    "Geometrically, the Bloch sphere includes single-qubit mixed states. In fact, mixed states are constitued by linear combinations of pure states having non-negative weighting coefficients that sum to 1. Hence it is not suprising that single-qubit mixed states can be viewed as laying within the interior of the Bloch sphere. The precise connection with the geometry relies on the fact that any density matrix of a single-qubit system, which is a $2 \\times 2$ matrix, can be written as :\n",
+    "\n",
+    "\n",
+    "![image](Fig3.png) ![image](Fig4.png)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## From Transmission to Teleportation ##\n",
+    "\n",
+    "### A. Quantum Teleportation Overview ###\n",
+    "\n",
+    "Let us assume that a quantum state $|\\Psi>$ must be transmitted from a sender, Alice, to a remote receiver, Bob. \n",
+    "We assume without any loss of generality that $|\\Psi>$ is a pure qbuit, yielding:\n",
+    "$|\\psi> = \\Alpha|0> + \\Beta|1>.$\n",
+    "\n",
+    "If the transmitter knows the quantum state $|\\Psi>$, if Alice knows $\\Alpha$ and $\\Beta$, the task can be accomplished by transmitting the values of alpha and beta to Bob and by letting Bob prepare $|\\Psi>$, *to \"transform\" a defualt sate into $|\\Psi>$ with the aid of Bob's local operations.* Indeed, several openquestions arise in conjunction with practical quantum state preparation, such as the specific construction of a set of universal gates, the requried depth of the quantum circuit, or the minium requried fidelity of the reconstructed state. \n",
+    "**However, in the most general case, the transmitter does not know the quantum state $|\\Psi>$ , andthe task cannot be accomplished with the aid of pure classical communication resources.** *In fact, the quantum measurement postulate prevents Alice from assessing $\\Alpha$ and $\\Beta$ with the aid of a quantum measurement, which would ireeversibly alter the original quantum state.*\n",
+    "Furthermore, the no-cloning theorm prevents Alice from preparing multiple copies of $|\\Psi>$ and estimating $\\Alpha$,$\\Beta$ by simply measuring the copies.\n",
+    "\n",
+    "**Thankfully, Quantum Teleportation constitutes a priceless technique of transmitting qubits whithout the pysical transfer of the particle stroing the qubit.** As shown in below, with the aid of local operations and an EPR pair shared between the source and destination, quantum teleportation allows us to *transmit* an unknown quantum state, as will be detailed in the next section.\n",
+    "\n",
+    "![image](Fig5.png)\n",
+    "\n",
+    "*Quantum teleportation implies the destruction of both the original qubit (encoding the quantum information to be transmitted) and the EPR member at the source, as a consequance of a measurement. Indeed, as wil be shown in Sec. III-B, the original qubit is reconstructed at the destination, once the output of the measurement at the source -2 classical bits- is received through a finite-delay classical line, obyeing the speed of light in an opticallink for example.*\n",
+    "\n",
+    "### B. Quantum Teleportation : Mathematical Details ###\n",
+    "\n",
+    "In a nutshell, the teleportation process of above figure takes as its input the state $|\\Psi>$ to be teleported and an EPR pair shared between Alice and Bob. Each of the four states $|\\phi^\\pm>$, $\\|\\Psi^\\pm>$ can be used for quantum teleportation, given that the state is fixed in advance by mutual agreement between Alice as well as Bob, and this mutual agreement can be achieved with the aid of a finite-delay classical link.\n",
+    "In the following, we assume without loss of generality that Alice and Bob share the State $|\\phi^+>$ = $(|00>+|11>)\\sqrt{2}$, as shown in above. Hence, the initial global state $|\\Psi_1>$ = $|\\Psi>\\bigotimes|\\phi^+>$ depicted in above figure is :\n",
+    "\n",
+    "$|\\phi_1>$ = $\\alpha|0>\\bigotimes$ $(|00>+|11> \\over\\sqrt{2})$ + $\\beta|1>\\bigotimes$ $(|00>+|11> \\over\\sqrt{2})$.\n",
+    "\n",
+    "By following the convention that the pair of leftmost qubits belongs to Alice and the rightmost qubit belongs to Bob, above eq. becomes equivalent to :\n",
+    "\n",
+    "$|\\phi_1>$ = $(\\alpha|000>+\\alpha|011> + \\beta|100> + \\beta|111>) \\over\\sqrt{2}$.\n",
+    "\n",
+    "**Step1**. The teleportation process of above fig. starts with Alice applying the CNOT gate of Table to the pair of qubits at her side. by recalling that the CNOT gate maps state |10> into |11> and vice versa, the global state $|\\phi_2>$after the CNOT gate becomes:\n",
+    "\n",
+    "\n",
+    "$|\\phi_2>$ = $(\\alpha|000>+\\alpha|011> + \\beta|110> + \\beta|101>) \\over\\sqrt{2}$.\n",
+    "\n",
+    "**Step2**. Then, as seen in figure, Alice applies the H gate of Table to the qubit to be teleported, to the leftmost qubit in above eq. By recalling that the H gate maps |0> into  $(|0> + |1> \\over\\sqrt{2})$ and |1> into $(|0> - |1> \\over\\sqrt{2})$, the global state $|\\phi_3>$ after the H gate is obatined as \n",
+    "\n",
+    "$|\\phi_3>$ = $(\\alpha|000>+\\alpha|100>+\\alpha|011>+\\alpha|111> +\\beta|010> - \\beta|110> +\\beta|001> - \\beta|101>) \\over\\ 2 $.\n",
+    "\n",
+    "By gathering the two leftmost qubits belonging to Alice, becomes equivalent to :\n",
+    "\n",
+    "$|\\phi_3>$ = $(|00>\\bigotimes(\\alpha|0>+\\beta|1>) + |01>\\bigotimes(\\alpha|1>+\\beta|0>) + |10>\\bigotimes(\\alpha|0>-\\beta|1>) +|11>\\bigotimes(\\alpha|1>-\\beta|0>) ) \\over\\ 2 $.\n",
+    "\n",
+    "\n",
+    "**Step3**. Then, as indicated in figure, Alice jointly measureds the pair of qubits at her side. Remarkabley, and regardless of the values of $\\alpha$ and $\\beta$, Alice has a 25% change of finding each of the four combinations. \n",
+    "Alice's measurement operation instantaneously fixes Bob's qubit, regardless of the distance between Alice and Bob as a consequence of the entanglement.\n",
+    "**However, Bob can only recover the original qubit $|\\psi>$ after he correctly receives the pair of classical bits conveying the specific results of Alices's measuremet.**\n",
+    "\n",
+    "**Step4** Step 4. Specifically, four terms can be identified in above eq, depending on the particular state of the two qubits at Alice.When Alice’s qubits are in state |00> , then Bob’s qubit is in the state $\\alpha$|0>  + $\\beta$|1> , i.e. Bob’s qubit is identical to the original quantum state $|\\Psi>$. Hence, if Alice obtains 00 by jointly measuring her pair of qubits and she communicates the outcome to Bob, then Bob can directly recover the original quantum state $|\\Psi>$ from the qubit at his side, without any quantum-domain operation. At this step, we say that the original quantum state $|\\Psi>$ has been teleported to Bob’s side. - Other cases, from the information received from Alice's slide Bob can recover."
+   ]
   }
  ],
  "metadata": {
