finish paper 1 review

--- a/Ohik_paper_reading/When Entanglement Meets Classical Communications/When Entanglement Meets Classical Communications- Quantum Teleportation for the Quantum Internet.ipynb
+++ b/Ohik_paper_reading/When Entanglement Meets Classical Communications/When Entanglement Meets Classical Communications- Quantum Teleportation for the Quantum Internet.ipynb
@@ -205,7 +205,9 @@
     "Alice's measurement operation instantaneously fixes Bob's qubit, regardless of the distance between Alice and Bob as a consequence of the entanglement.\n",
     "**However, Bob can only recover the original qubit $|\\psi>$ after he correctly receives the pair of classical bits conveying the specific results of Alices's measuremet.**\n",
     "\n",
-    "**Step4** Step 4. Specifically, four terms can be identified in above eq, depending on the particular state of the two qubits at Alice.When Alice’s qubits are in state |00> , then Bob’s qubit is in the state $\\alpha$|0>  + $\\beta$|1> , i.e. Bob’s qubit is identical to the original quantum state $|\\Psi>$. Hence, if Alice obtains 00 by jointly measuring her pair of qubits and she communicates the outcome to Bob, then Bob can directly recover the original quantum state $|\\Psi>$ from the qubit at his side, without any quantum-domain operation. At this step, we say that the original quantum state $|\\Psi>$ has been teleported to Bob’s side. - Other cases, from the information received from Alice's slide Bob can recover."
+    "**Step4** Step 4. Specifically, four terms can be identified in above eq, depending on the particular state of the two qubits at Alice.When Alice’s qubits are in state |00> , then Bob’s qubit is in the state $\\alpha$|0>  + $\\beta$|1> , i.e. Bob’s qubit is identical to the original quantum state $|\\Psi>$. Hence, if Alice obtains 00 by jointly measuring her pair of qubits and she communicates the outcome to Bob, then Bob can directly recover the original quantum state $|\\Psi>$ from the qubit at his side, without any quantum-domain operation. At this step, we say that the original quantum state $|\\Psi>$ has been teleported to Bob’s side. - Other cases, from the information received from Alice's slide Bob can recover.\n",
+    "\n",
+    "## There is more materials concerning on error correction / hardware manipulation, but I'll move onto quantum algorithm. ##"
    ]
   }
  ],
