commit and sync test

--- a/jupyter/quantum.ipynb
+++ b/jupyter/quantum.ipynb
@@ -450,6 +450,14 @@
    "source": [
     "Above plot should be closed to 0.25% 0.25% 0.25% 0.25%"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09f74d92",
+   "metadata": {},
+   "source": [
+    "test"
+   ]
   }
  ],
  "metadata": {
