--- a/jupyter/quantum.ipynb
+++ b/jupyter/quantum.ipynb
@@ -452,11 +452,114 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "09f74d92",
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e4e66eb1",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "generated information is : \n",
+      "Instruction(name='initialize', num_qubits=1, num_clbits=0, params=[(0.27149316763628517-0.84293779072803j), (0.21926783498470379-0.40947400092128516j)])\n",
+      "       ┌───────────────────────────────────────────────┐      ░      ┌───┐ ░ »\n",
+      "q17_0: ┤ Initialize(0.27149-0.84294j,0.21927-0.40947j) ├──────░───■──┤ H ├─░─»\n",
+      "       └─────────────────────┬───┬─────────────────────┘      ░ ┌─┴─┐└───┘ ░ »\n",
+      "q17_1: ──────────────────────┤ H ├────────────────────────■───░─┤ X ├──────░─»\n",
+      "                             └───┘                      ┌─┴─┐ ░ └───┘      ░ »\n",
+      "q17_2: ─────────────────────────────────────────────────┤ X ├─░────────────░─»\n",
+      "                                                        └───┘ ░            ░ »\n",
+      " c2: 1/══════════════════════════════════════════════════════════════════════»\n",
+      "                                                                             »\n",
+      " c3: 1/══════════════════════════════════════════════════════════════════════»\n",
+      "                                                                             »\n",
+      "«       ┌─┐                 \n",
+      "«q17_0: ┤M├─────────────────\n",
+      "«       └╥┘┌─┐              \n",
+      "«q17_1: ─╫─┤M├──────────────\n",
+      "«        ║ └╥┘ ┌───┐  ┌───┐ \n",
+      "«q17_2: ─╫──╫──┤ Z ├──┤ X ├─\n",
+      "«        ║  ║  └─╥─┘  └─╥─┘ \n",
+      "«        ║  ║ ┌──╨──┐   ║   \n",
+      "« c2: 1/═╩══╬═╡ 0x1 ╞═══╬═══\n",
+      "«        0  ║ └─────┘┌──╨──┐\n",
+      "« c3: 1/════╩════════╡ 0x1 ╞\n",
+      "«           0        └─────┘\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'plot_bloch_multivector' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/ohik/Desktop/Quantum Computing/SeniorDesignQuantum17/jupyter/quantum.ipynb Cell 19\u001b[0m line \u001b[0;36m5\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ohik/Desktop/Quantum%20Computing/SeniorDesignQuantum17/jupyter/quantum.ipynb#X24sZmlsZQ%3D%3D?line=54'>55</a>\u001b[0m     result \u001b[39m=\u001b[39m execute(teleportation_circuit, backend\u001b[39m=\u001b[39mstatevector_simulator, shots\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\u001b[39m.\u001b[39mresult()\u001b[39m.\u001b[39mget_statevector()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ohik/Desktop/Quantum%20Computing/SeniorDesignQuantum17/jupyter/quantum.ipynb#X24sZmlsZQ%3D%3D?line=55'>56</a>\u001b[0m     plot_bloch_multivector(result)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/ohik/Desktop/Quantum%20Computing/SeniorDesignQuantum17/jupyter/quantum.ipynb#X24sZmlsZQ%3D%3D?line=57'>58</a>\u001b[0m QuantumTeleportation(informationbit)\n",
+      "\u001b[1;32m/Users/ohik/Desktop/Quantum Computing/SeniorDesignQuantum17/jupyter/quantum.ipynb Cell 19\u001b[0m line \u001b[0;36m5\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ohik/Desktop/Quantum%20Computing/SeniorDesignQuantum17/jupyter/quantum.ipynb#X24sZmlsZQ%3D%3D?line=53'>54</a>\u001b[0m \u001b[39mprint\u001b[39m(teleportation_circuit)    \n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ohik/Desktop/Quantum%20Computing/SeniorDesignQuantum17/jupyter/quantum.ipynb#X24sZmlsZQ%3D%3D?line=54'>55</a>\u001b[0m result \u001b[39m=\u001b[39m execute(teleportation_circuit, backend\u001b[39m=\u001b[39mstatevector_simulator, shots\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\u001b[39m.\u001b[39mresult()\u001b[39m.\u001b[39mget_statevector()\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/ohik/Desktop/Quantum%20Computing/SeniorDesignQuantum17/jupyter/quantum.ipynb#X24sZmlsZQ%3D%3D?line=55'>56</a>\u001b[0m plot_bloch_multivector(result)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'plot_bloch_multivector' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "test"
+    "import numpy as np\n",
+    "from qiskit.extensions import Initialize\n",
+    "from qiskit import QuantumCircuit, QuantumRegister, ClassicalRegister, execute, Aer, IBMQ\n",
+    "from qiskit.quantum_info import Statevector, random_statevector\n",
+    "from qiskit.visualization import array_to_latex\n",
+    "from IPython.display import display, Math, Latex\n",
+    "import sys\n",
+    "\n",
+    "information_global = QuantumRegister(1)\n",
+    "EPR_global_sender = QuantumRegister(1)\n",
+    "EPR_global_receiver = QuantumRegister(1)\n",
+    "def random_state(nqubits):\n",
+    "    \"\"\"Creates a random nqubit state vector\"\"\"\n",
+    "    from numpy import append, array, sqrt\n",
+    "    from numpy.random import random\n",
+    "    real_parts = array([])\n",
+    "    im_parts = array([])\n",
+    "    for amplitude in range(2**nqubits):\n",
+    "        real_parts = append(real_parts, (random()*2)-1)\n",
+    "        im_parts = append(im_parts, (random()*2)-1)\n",
+    "    # Combine into list of complex numbers:\n",
+    "    amps = real_parts + 1j*im_parts\n",
+    "    # Normalise\n",
+    "    magnitude_squared = 0\n",
+    "    for a in amps:\n",
+    "        magnitude_squared += abs(a)**2\n",
+    "    amps /= sqrt(magnitude_squared)\n",
+    "    return amps\n",
+    "psi  = random_state(1)\n",
+    "informationbit = Initialize(psi)\n",
+    "print(\"generated information is : \")\n",
+    "print(informationbit)\n",
+    "\n",
+    "def QuantumTeleportation(informationbit):\n",
+    "    statevector_simulator = Aer.get_backend('statevector_simulator')\n",
+    "    qr = QuantumRegister(3)    \n",
+    "    cr1 = ClassicalRegister(1)\n",
+    "    cr2 = ClassicalRegister(1)  \n",
+    "    teleportation_circuit = QuantumCircuit(qr, cr1, cr2)\n",
+    "    teleportation_circuit.append(informationbit,[0])\n",
+    "    teleportation_circuit.barrier\n",
+    "    teleportation_circuit.h(1)\n",
+    "    teleportation_circuit.cx(1,2)\n",
+    "    teleportation_circuit.barrier()\n",
+    "    teleportation_circuit.cx(0,1)\n",
+    "    teleportation_circuit.h(0)\n",
+    "    teleportation_circuit.barrier()\n",
+    "    teleportation_circuit.measure(0,cr1)\n",
+    "    teleportation_circuit.measure(1,cr2)\n",
+    "    #windows ->send classical measuremnts and receive outcome.)\n",
+    "    #bleow code should be interactive with the actual classical network.\n",
+    "    teleportation_circuit.z(qr[2]).c_if(cr1, 1)  #if cr1 is 1 apply Z gate\n",
+    "    teleportation_circuit.x(qr[2]).c_if(cr2, 1) #if cr2 is 1 apply x gate, look at table above\n",
+    "    print(teleportation_circuit)    \n",
+    "    result = execute(teleportation_circuit, backend=statevector_simulator, shots=1).result().get_statevector()\n",
+    "    plot_bloch_multivector(result)\n",
+    "\n",
+    "QuantumTeleportation(informationbit)"
    ]
   }
  ],
